--- a/api/v1/swagger/definitions/item.yaml
+++ b/api/v1/swagger/definitions/item.yaml
@@ -7,6 +7,7 @@ properties:
   biblio_id:
     type: integer
     description: Internal identifier for the parent bibliographic record
+  biblio: {}
   external_id:
     type:
       - string
@@ -211,6 +212,14 @@ properties:
   exclude_from_local_holds_priority:
     type: boolean
     description: Exclude this item from local holds priority.
+  return_claims:
+    type: array
+    description: An array of all return claims associated with this item
+  return_claim:
+    type:
+      - object
+      - "null"
+    description: A return claims object if one exists that's unresolved
 additionalProperties: false
 required:
   - item_id
