--- a/api/v1/swagger/paths/items.yaml
+++ b/api/v1/swagger/paths/items.yaml
@@ -93,6 +93,166 @@
     x-koha-authorization:
       permissions:
         catalogue: "1"
+/items/{item_id}/bundled_items:
+  post:
+    x-mojo-to: Items#add_to_bundle
+    operationId: addToBundle
+    tags:
+      - items
+    summary: Add item to bundle
+    parameters:
+      - $ref: ../parameters.yaml#/item_id_pp
+      - name: body
+        in: body
+        description: A JSON object containing information about the new bundle link
+        required: true
+        schema:
+          $ref: ../definitions.yaml#/bundle_link
+    consumes:
+      - application/json
+    produces:
+      - application/json
+    responses:
+      "201":
+        description: A successfully created bundle link
+        schema:
+          items:
+            $ref: ../definitions.yaml#/item
+      "400":
+        description: Bad parameter
+        schema:
+          $ref: ../definitions.yaml#/error
+      "401":
+        description: Authentication required
+        schema:
+          $ref: ../definitions.yaml#/error
+      "403":
+        description: Access forbidden
+        schema:
+          $ref: ../definitions.yaml#/error
+      "404":
+        description: Resource not found
+        schema:
+          $ref: ../definitions.yaml#/error
+      "409":
+        description: Conflict in creating resource
+        schema:
+          $ref: ../definitions.yaml#/error
+      "500":
+        description: Internal server error
+        schema:
+          $ref: ../definitions.yaml#/error
+      "503":
+        description: Under maintenance
+        schema:
+          $ref: ../definitions.yaml#/error
+    x-koha-authorization:
+      permissions:
+        catalogue: 1
+  get:
+    x-mojo-to: Items#bundled_items
+    operationId: bundledItems
+    tags:
+      - items
+    summary: List bundled items
+    parameters:
+      - $ref: ../parameters.yaml#/item_id_pp
+      - name: external_id
+        in: query
+        description: Search on the item's barcode
+        required: false
+        type: string
+      - $ref: ../parameters.yaml#/match
+      - $ref: ../parameters.yaml#/order_by
+      - $ref: ../parameters.yaml#/page
+      - $ref: ../parameters.yaml#/per_page
+      - $ref: ../parameters.yaml#/q_param
+      - $ref: ../parameters.yaml#/q_body
+      - $ref: ../parameters.yaml#/q_header
+    consumes:
+      - application/json
+    produces:
+      - application/json
+    responses:
+      "200":
+        description: A list of item
+        schema:
+          type: array
+          items:
+            $ref: ../definitions.yaml#/item
+      "401":
+        description: Authentication required
+        schema:
+          $ref: ../definitions.yaml#/error
+      "403":
+        description: Access forbidden
+        schema:
+          $ref: ../definitions.yaml#/error
+      "500":
+        description: Internal server error
+        schema:
+          $ref: ../definitions.yaml#/error
+      "503":
+        description: Under maintenance
+        schema:
+          $ref: ../definitions.yaml#/error
+    x-koha-authorization:
+      permissions:
+        catalogue: "1"
+    x-koha-embed:
+      - biblio
+      - checkout
+      - return_claims
+      - return_claim
+      - return_claim.patron
+/items/{item_id}/bundled_items/{bundled_item_id}:
+  delete:
+    x-mojo-to: Items#remove_from_bundle
+    operationId: removeFromBundle
+    tags:
+      - items
+    summary: Remove item from bundle
+    parameters:
+      - $ref: ../parameters.yaml#/item_id_pp
+      - name: bundled_item_id
+        in: path
+        description: Internal identifier for the bundled item
+        required: true
+        type: string
+    consumes:
+      - application/json
+    produces:
+      - application/json
+    responses:
+      "204":
+        description: Bundle link deleted
+      "400":
+        description: Bad parameter
+        schema:
+          $ref: ../definitions.yaml#/error
+      "401":
+        description: Authentication required
+        schema:
+          $ref: ../definitions.yaml#/error
+      "403":
+        description: Access forbidden
+        schema:
+          $ref: ../definitions.yaml#/error
+      "404":
+        description: Resource not found
+        schema:
+          $ref: ../definitions.yaml#/error
+      "500":
+        description: Internal server error
+        schema:
+          $ref: ../definitions.yaml#/error
+      "503":
+        description: Under maintenance
+        schema:
+          $ref: ../definitions.yaml#/error
+    x-koha-authorization:
+      permissions:
+        catalogue: 1
 "/items/{item_id}/pickup_locations":
   get:
     x-mojo-to: Items#pickup_locations
