Bug 24857: Add item group management to detail.pl
Test Plan:
1) Apply the patches for this bug
2) Run updatedatabase.pl
3) Restart all the things!
4) Enable the new syspref EnableItemGroups
5) Browse to detail.pl for a record with items
6) Note the new Item Groups tab
7) Test creating, editing and deleting groups
8) On the Holdings tab, select one or more items using the checkboxes
8) Note new selection options for setting an item group for items,
   and for clearing an item group for items.
9) Test adding and clearing the item group for items

--- a/admin/columns_settings.yml
+++ b/admin/columns_settings.yml
@@ -359,6 +359,8 @@ modules:
             -
               columnname: holdings_ccode
             -
+              columnname: holdings_volume
+            -
               columnname: holdings_itemcallnumber
             -
               columnname: holdings_status
@@ -415,6 +417,8 @@ modules:
               columnname: otherholdings_homebranch
             -
               columnname: otherholdings_ccode
+            -
+              columnname: otherholdings_volume
             -
               columnname: otherholdings_itemcallnumber
             -
