Bug 31632: Add missing suggestion statuses to API

--- a/api/v1/swagger/definitions/suggestion.yaml
+++ b/api/v1/swagger/definitions/suggestion.yaml
@@ -70,6 +70,8 @@ properties:
       - CHECKED
       - ACCEPTED
       - REJECTED
+      - ORDERED
+      - AVAILABLE
   note:
     type:
       - string
