Bug 31632: Improve display

--- a/api/v1/swagger/definitions/suggestion.yaml
+++ b/api/v1/swagger/definitions/suggestion.yaml
@@ -189,4 +189,9 @@ properties:
       - boolean
       - "null"
     description: archived (processed) suggestion
+  suggester:
+    type:
+      - object
+      - "null"
+    description: The object representing the user who made the suggestion
 additionalProperties: false
